# ptail

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release.toml
.github/: dependabot.yml
.github/workflows/: test.yml
src/: main.rs
