[package]
name = "ptail"
version = "0.2.3-alpha.0"
readme = "README.md"
authors = ["Tom Forbes <tom@tomforb.es>"]
description = "Stream and display a fixed number of lines from a processes output."
edition = "2018"
repository = "https://github.com/orf/ptail"
license = "MIT"
categories = [
    "development-tools",
]
keywords = ["cli"]
exclude = ["images/**", ".github/**"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.2"
structopt = "0.3.8"
failure = "0.1.6"
duct = "0.13.3"

[profile.release]
lto = true
